--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Test_Project_React:Vite + React</title>
+    <title>Test_Project_React w/ Lek picture</title>
   </head>
   <body>
     <div id="root"></div>
